# ChangeLog for dev-python/astroquery
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Nov 2014; Joseph Jon Booker <joe@neoturbine.net> astroquery-0.2.ebuild,
  astroquery-9999.ebuild:
  dev-python/astroquery: Make astropy-helpers a DEPEND, not RDEPEND package

*astroquery-0.2 (22 Aug 2014)
*astroquery-9999 (22 Aug 2014)

  22 Aug 2014; Joseph Jon Booker <joe@neoturbine.net> +astroquery-0.2.ebuild,
  +astroquery-9999.ebuild, +metadata.xml:
  dev-python/astroquery: Add astroquery ebuild