@@ -1,1 +1,2 @@
+DIST astroquery-0.2.3.tar.gz 2279856 SHA256 dc04aa451bc6683becb616077813244a7e336da2427c5a0c59507357e539bc82 SHA512 cf5caca9d8ad82fd024793f54f2482d30667910e03e4f33c5eae931d4374daac69349bd9983eafc5a4c403ec7868911f3486584fe373adb774a03d39c6839a45 WHIRLPOOL 46de8aa884d18aa901fac07f9657adb693b458e2838a0e517e6fa8b145a870c0ce334019ed262aa052a3b68ad1a6e88a396421b73cf0fa533e34a8e0bacc7a13
 DIST astroquery-0.2.tar.gz 2212909 SHA256 30cdd66828dedf81795ab4e3d6d496d5e4a83c15a740981a1f34cbf4bc75cb01 SHA512 06549526b8fe7fafd7a5ac7d8a97a3d78ceec048a27f6a5c7a8274aca8ff666f300998347c2d8a3dd86e2f8706d8a2bfdfa07f684e7fa87016281851436225c0 WHIRLPOOL e53c61d1a3a0e590b19c3be77e5bf399f3ffb5db8e99c9c9a1064e2def4729431662488cb9d80b841c47e4e8a239dc4f6c1a16ef4ea05f0b0690ac8a9cbaf58a
