@@ -1,0 +1,70 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=5
+
+PYTHON_COMPAT=( python{2_7,3_3,3_4} )
+inherit distutils-r1
+
+MY_PV=${PV/_/-}
+
+if [ ${PV} == "9999" ] ; then
+	inherit git-r3
+	EGIT_REPO_URI="https://github.com/astropy/${PN}.git"
+else
+	SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
+	KEYWORDS="~amd64"
+fi
+
+DESCRIPTION="A collection of packages to access online astronomical resources"
+HOMEPAGE="https://github.com/astropy/astroquery"
+
+LICENSE="MIT"
+SLOT="0"
+IUSE="doc"
+DOCS=( README.rst )
+
+RDEPEND="
+	>=dev-python/astropy-0.4.1[${PYTHON_USEDEP}]
+	dev-python/requests[${PYTHON_USEDEP}]
+	dev-python/numpy[${PYTHON_USEDEP}]
+	dev-python/beautifulsoup:4[${PYTHON_USEDEP}]
+	dev-python/html5lib[${PYTHON_USEDEP}]"
+DEPEND="${RDEPEND}
+	dev-python/astropy-helpers[${PYTHON_USEDEP}]
+"
+
+S=${WORKDIR}/${PN}-${MY_PV}
+
+python_prepare_all() {
+	distutils-r1_python_prepare_all
+	sed -e '/import ah_bootstrap/d' -i setup.py || die "Removing ah_bootstrap failed"
+}
+
+python_test() {
+	distutils_install_for_testing
+	cd "${TEST_DIR}" || die
+	"${EPYTHON}" -c "import astroquery, sys;r = astroquery.test();sys.exit(r)" \
+		|| die "tests fail with ${EPYTHON}"
+}
+
+python_compile_all() {
+	if use doc; then
+		python_export_best
+		VARTEXFONTS="${T}"/fonts \
+			MPLCONFIGDIR="${BUILD_DIR}" \
+			PYTHONPATH="${BUILD_DIR}"/lib \
+			esetup.py build_sphinx
+	fi
+}
+
+python_install_all() {
+	use doc && local HTML_DOCS=( docs/_build/html/. )
+	distutils-r1_python_install_all
+}
+
+pkg_postinst() {
+	elog "To use the ESO archive web service, dev-python/keyring"
+	elog "must be installed."
+}
