@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*astroquery-0.2.3 (18 Nov 2014)
+
+  18 Nov 2014; Joseph Jon Booker <joe@neoturbine.net> +astroquery-0.2.3.ebuild:
+  dev-python/astroquery: Version bump to 0.2.3
+
   18 Nov 2014; Joseph Jon Booker <joe@neoturbine.net> astroquery-0.2.ebuild,
   astroquery-9999.ebuild:
   dev-python/astroquery: Make astropy-helpers a DEPEND, not RDEPEND package
